spinning-wheel design fixes on mobile view

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,9 +13,10 @@ h3 {
 }
 
 .info-form {
-  width: 60%;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  width: 60%;
 }
 
 .form-input {
@@ -67,7 +68,7 @@ h3 {
   border-radius: 10px;
 }
 
-@media screen and (max-width: 576px){
+@media screen and (max-width: 750px){
   .container {
     margin: 0 auto;
   }
@@ -89,7 +90,7 @@ h3 {
   }
 
   .form-input {
-    width: auto;
+    width: 80%;
   }
 
   .submit-btn {
